# homeconnect_local_hass

./: .gitignore  README.md  pyproject.toml  ruff.toml
.github/ISSUE_TEMPLATE/: bug_setup.yml  bug_usage.yml  feature_request.yml
.github/workflows/: claude-pr-review.yml  lint.yaml
custom_components/homeconnect_ws/: __init__.py  application_credentials.py  binary_sensor.py  button.py  config_flow.py  const.py  coordinator.py  entity.py  export_profile.py  export_view.py  fan.py  hc_cloud_api.py  hc_legacy_oauth.py  helpers.py  light.py  manifest.json  number.py  quality_scale.yaml  select.py  sensor.py  switch.py  update.py
custom_components/homeconnect_ws/entity_descriptions/: __init__.py  common.py  cooking.py  descriptions_definitions.py  dishcare.py  laundry_care.py  refrigeration.py
custom_components/homeconnect_ws/translations/: de.json  en.json  it.json  nl.json  zh-Hans.json
tests/: __init__.py  conftest.py  const.py  test_binary_sensor.py  test_button.py  test_config_flow.py  test_cooking_descriptions.py  test_entity_descriptions.py  test_export_profile.py  test_export_view.py  test_fan.py  test_helpers.py  test_init.py  test_light.py  test_number.py  test_options_flow.py  test_reauth_flow.py  test_select.py  test_sensor.py  test_switch.py
