[project]
version = "1.6.0"
name = "homeconnect_ws"
authors = [{ name = "chris-mc1" }, { name = "vemboy200" }]
description = "Home Connect Local for Homeassistant"
readme = "README.md"
requires-python = ">=3.14.2"
dependencies = ["home-disconnect==1.6.0b0"]

[project.urls]
Homepage = "https://github.com/vemboy200/homeconnect_local_hass"
Issues = "https://github.com/vemboy200/homeconnect_local_hass/issues"

[dependency-groups]
dev = [
    "colorlog==6.11.0",
    "homeassistant==2026.7.3",
    "pytest-homeassistant-custom-component==0.13.347",
    "voluptuous-stubs==0.1.1",
    "ruff==0.15.22",
    "pre-commit==4.6.1",
    "mypy==2.3.0",
]

test = [
    "pytest>=9.0.0",
    "pytest-asyncio>=1.3.0",
    "pytest-aiohttp>=1.1.0",
    "coverage>=7.10.6",
    "pytest-cov>=7.0.0",
]

[tool.coverage.run]
branch = true

[tool.coverage.report]
exclude_lines = ["if TYPE_CHECKING:"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.mypy]
python_version = "3.14"
show_error_codes = true
explicit_package_bases = true
mypy_path = "."

[[tool.mypy.overrides]]
module = "custom_components.homeconnect_ws.*"
strict = true
warn_unreachable = true
