[project]
version = "1.6.0"
name = "homeconnect_ws"
authors = [{ name = "chris-mc1" }, { name = "vemboy200" }]
description = "Home Connect Local for Homeassistant"
readme = "README.md"
requires-python = ">=3.14.2"
dependencies = ["home-disconnect==1.5.5"]

[project.urls]
Homepage = "https://github.com/vemboy200/homeconnect_local_hass"
Issues = "https://github.com/vemboy200/homeconnect_local_hass/issues"

[dependency-groups]
dev = [
    "colorlog==6.10.1",
    "homeassistant==2026.5.3",
    "pytest-homeassistant-custom-component==0.13.332",
    "voluptuous-stubs==0.1.1",
    "ruff==0.16.0",
    "pre-commit==4.6.0",
]

test = [
    "pytest>=9.0.0",
    "pytest-asyncio>=1.3.0",
    "pytest-aiohttp>=1.1.0",
    "coverage>=7.10.6",
    "pytest-cov>=7.0.0",
]

[tool.coverage.run]
branch = true

[tool.coverage.report]
exclude_lines = ["if TYPE_CHECKING:"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
